<resources>
    <string name="app_name">Translator</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search...</string>
    <string name="category_nouns">Nouns</string>
    <string name="category_pronouns">Pronouns</string>
    <string name="category_verbs">Verbs</string>
    <string name="category_adjectives">Adjectives</string>
    <string name="category_prepositions">Prepositions</string>
    <string name="category_phrases">Phrases</string>
    <string name="category_adj_notes">Notes on Spanish Adjectives</string>
    <string name="category_physical">Physical Attributes</string>
    <string name="category_personality">Personality Attributes</string>
    <string name="category__adj_other">Other Adjectives</string>
    <string name="category_chrono">Chronological</string>
    <string name="category_spatial">Spatial</string>
    <string name="category_nouns_notes">Notes on Spanish Nouns</string>
    <string name="category_animals">Animals</string>
    <string name="category_calendar">Calendar Nouns</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_household">House Terms</string>
    <string name="category_sports">Sports</string>
    <string name="category_countries_languages">Countries and Languages</string>
    <string name="category_people">People</string>
    <string name="category_colors">Colors</string>
    <string name="category_school">School</string>
    <string name="category_other">Other Nouns</string>
    <string name="category_places">Places</string>
    <string name="category_food">Food and Drink</string>
    <string name="category_jobs">Jobs</string>
    <string name="category_trans">Transportation</string>
    <string name="category_directions">Directions</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_land">Land Features</string>
    <string name="category_parties">Parties</string>
    <string name="category_personal">Personal</string>
    <string name="category_possessive">Possessive</string>
    <string name="category_reflexive">Reflexive</string>
    <string name="category_relative">Relative</string>
    <string name="category_demonstrative">Demonstrative</string>
    <string name="category_interrogative">Interrogative</string>
    <string name="category_indefinite">Indefinite</string>
    <string name="category_object">Object</string>
    <string name="category_poss_dep">Possessive Dependent</string>
    <string name="category_poss_ind">Possessive Independent</string>
    <string name="category_subject">Subject</string>
    <string name="category_pronoun_notes">Notes on Spanish Pronouns</string>
    <string name="category_time">Time</string>
    <string name="category_location">Location</string>
    <string name="category_about">About Someone</string>
    <string name="category_descriptive">I...</string>
    <string name="ex">Examples</string>
    <string name="adj_notes">\tAdjectives change depending on the noun they are describing.
    Masculine singular, feminine singular, masculine plural, and feminine plural adjectives end in
    o/a/os/as, respectively. Gender neutral adjectives (those ending in e, en, il, etc) remain the
    same for both singular forms and gain an \"s\" or \"es\" at the end for their plural forms.</string>
    <string name="adj_ex_m_s">My dog is old.
        \nMi perro es viejo.</string>
    <string name="adj_ex_f_s">My mother is kind.
        \nMi madre is simpática.</string>
    <string name="adj_ex_m_p">My brothers are funny.
        \nMis hermanos son cómicos.</string>
    <string name="adj_ex_f_p">My clothes are new.
        \nMis ropas son nuevas.</string>
    <string name="adj_ex_n_s">My father is strong.
         \nMi padre es fuerte.</string>
    <string name="adj_ex_n_p">The girls are sad.
         \nLos niñas son tristes.</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>
    <string name="color_grey">Grey</string>
    <string name="color_brown">Brown</string>
    <string name="physical_bald">Bald</string>
    <string name="physical_beautiful">Beautiful</string>
    <string name="physical_big">Big</string>
    <string name="physical_blonde">Blonde</string>
    <string name="physical_brunnette">Brunnette</string>
    <string name="physical_dry">Dry</string>
    <string name="physical_fat">Fat</string>
    <string name="physical_handsome">Handsome</string>
    <string name="physical_long">Long</string>
    <string name="physical_new">New</string>
    <string name="physical_old">Old</string>
    <string name="physical_pretty">Pretty</string>
    <string name="physical_redhead">Redhead</string>
    <string name="physical_short">Short</string>
    <string name="physical_silver_hair">Silver-Haired</string>
    <string name="physical_skinny">Skinny</string>
    <string name="physical_small">Small</string>
    <string name="physical_strong">Strong</string>
    <string name="physical_tall">Tall</string>
    <string name="physical_ugly">Ugly</string>
    <string name="physical_weak">Weak</string>
    <string name="physical_wet">Wet</string>
    <string name="physical_young">Young</string>
    <string name="personal_anxious">Anxious</string>
    <string name="personal_disorganized">Disorganized</string>
    <string name="personal_excited">Excited</string>
    <string name="personal_foolish">Foolish</string>
    <string name="personal_funny">Funny</string>
    <string name="personal_happy">Happy</string>
    <string name="personal_hard_working">Hard Working</string>
    <string name="personal_intelligent">Intelligent</string>
    <string name="personal_kind">Kind</string>
    <string name="personal_lazy">Lazy</string>
    <string name="personal_mean">Mean</string>
    <string name="personal_poor">Poor</string>
    <string name="personal_sad">Sad</string>
    <string name="personal_scary">Scary</string>
    <string name="personal_serious">Serious</string>
    <string name="personal_wealthy">Wealthy</string>
    <string name="other_bad">Bad</string>
    <string name="other_early">Early</string>
    <string name="other_fast">Fast</string>
    <string name="other_good">Good</string>
    <string name="other_gross">Gross</string>
    <string name="other_important">Important</string>
    <string name="other_last">Last</string>
    <string name="other_late">Late</string>
    <string name="other_next">Next</string>
    <string name="other_slow">Slow</string>
    <string name="other_tasty">Tasty</string>
    <string name="nouns_notes">\tEvery noun in Spanish has a gender, male or female. Masculine and
        feminine nouns usually end in \"o\" or \"a\" and are preceded by \"el/un\" and \"la/una\" respectively.
        However, there are a few exceptions such as \"El álgebra\" (algebra). Plural nouns end in
        \"os\", \"as\", or \"es.\"</string>
    <string name="nouns_ex_m_s">Where is the gym?
        \n¿Donde está el gimnasio?</string>
    <string name="nouns_ex_f_s">The apple is red.
        \nLa manzana es rojo.</string>
    <string name="nouns_ex_m_p">The men are European.
        \nLos hombres son Europeos.</string>
    <string name="nouns_ex_f_p">The beers are gross.
        \nLas cervezas son asquerosas.</string>
    <string name="animals_bird">Bird</string>
    <string name="animals_cat">Cat</string>
    <string name="animals_dog">Dog</string>
    <string name="animals_fish">Fish</string>
    <string name="animals_pet">Pet</string>
    <string name="category_countries">Countries</string>
    <string name="category_languages">Languages</string>
    <string name="category_days">Days of the Week</string>
    <string name="category_months">Months</string>
    <string name="category_years">Years</string>
    <string name="category_seasons">Seasons</string>
    <string name="category_holidays">Holidays</string>
    <string name="days_monday">Monday</string>
    <string name="days_tuesday">Tuesday</string>
    <string name="days_wednesday">Wednesday</string>
    <string name="days_thursday">Thursday</string>
    <string name="days_friday">Friday</string>
    <string name="days_saturday">Saturday</string>
    <string name="days_sunday">Sunday</string>
    <string name="days_day">Day</string>
    <string name="days_yesterday">Yesterday</string>
    <string name="days_today">Today</string>
    <string name="days_tomorrow">Tomorrow</string>
    <string name="days_week">Week</string>
    <string name="days_weekday">Weekday</string>
    <string name="days_weekend">Weekend</string>
    <string name="days_last_week">Last week</string>
    <string name="days_this_week">This week</string>
    <string name="days_next_week">Next week</string>
    <string name="months_january">January</string>
    <string name="months_february">February</string>
    <string name="months_march">March</string>
    <string name="months_april">April</string>
    <string name="months_may">May</string>
    <string name="months_june">June</string>
    <string name="months_july">July</string>
    <string name="months_august">August</string>
    <string name="months_september">September</string>
    <string name="months_october">October</string>
    <string name="months_november">November</string>
    <string name="months_december">December</string>
    <string name="months_month">Month</string>
    <string name="months_last_month">Last month</string>
    <string name="months_this_month">This month</string>
    <string name="months_next_month">Next month</string>
    <string name="months__months_ago">A few months ago</string>
    <string name="seasons_spring">Spring</string>
    <string name="seasons_summer">Summer</string>
    <string name="seasons_fall">Fall</string>
    <string name="seasons_winter">Winter</string>
    <string name="holidays_new_years">New Year\'s</string>
    <string name="holidays_valentines">Valentine\'s Day</string>
    <string name="holidays_april_fools">April Fool\'s Day</string>
    <string name="holidays_passover">Passover</string>
    <string name="holidays_ash_wednesday">Ash Wednesday</string>
    <string name="holidays_lent">Lent</string>
    <string name="conj_notes">\tVerb conjugations end in the following, depending on the subject:
        I (yo) - \"o\"; You, informal (tú) - \"as/es\"; he/she/you, formal (el/ella/usted) -
        \"a/e\"; we (nosotros) - \"amos/emos/imos\"; They/You All (Ellos/Ellas/Ustedes) - \"an/en\";
    </string>
    <string name="conj_ex_yo">I believe she\'s in the bathroom.
        \nYo creo ella E\está en el baño.</string>
    <string name="conj_ex_tu">You should go to sleep.
        \nTú debes dormir.</string>
    <string name="conj_ex_nosotros">We live close to the school.
        \nNosotros vivimos cerca de la escuela.</string>
    <string name="conj_ex_el_ella_usted">She plays volleyball.
        \nElla juega el voleibol.</string>
    <string name="conj_ex_ellos_ellas_ustedes">They write notes in class.
        \nEllos escriben las notas en clase.</string>
    <string name="gustar_notes">\tGustar follows the regular set of rules for conjugation. However, since
        it literally means \"to please,\" (as in apples please me) it is conjugated for the
        object/activity, not the person.
    </string>
    <string name="gustar_ex_yo_singular">I like to sing.
        \nMe gusta cantar.</string>
    <string name="gustar_ex_el_ella_usted_singular">He likes the ocean.
        \nSe gusta el océano. </string>
    <string name="gustar_ex_nos_plural">We like the rings.
        \nNos gustan los anillos.</string>
    <string name="gustar_ex_ellos_ellas_ustedes">They like the fish.
        \nEllos gustan los pescados.</string>
</resources>